# M6_Assignment

./: .cache.sqlite  Assignment.md  LICENSE  README.md  config.py  fetch.py  generate_poems.py  main.py  pyproject.toml  weather_queries.py
.github/workflows/: fetch-weather.yml  generate-poems.yml
data/: weather.db
docs/: index.html
outputs/: poems.md
