[project]
name = "m6-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.5",
    "dotenv>=0.9.9",
    "groq>=1.1.1",
    "numpy>=2.4.3",
    "openmeteo-requests>=1.7.5",
    "pandas>=3.0.1",
    "requests>=2.32.5",
    "requests-cache>=1.3.1",
    "retry-requests>=2.0.0",
]
